Added create-video-from-text and create-video-from-audio endpoints

--- a/rate-limits.mdx
+++ b/rate-limits.mdx
@@ -6,11 +6,11 @@ Your account plan tier will limit the overall number of requests you can make pe
 
 | Plan Tier            | Calls per minute |
 | -------------------- | ---------------- |
-| Starter              | 10               |
-| Creator/Creator-Plus | 50               |
-| Pro                  | 100              |
-| Business             | 300              |
-| Enterprise           | Unlimited        |
+| Starter              | xx               |
+| Creator/Creator-Plus | xx               |
+| Pro                  | xx               |
+| Business             | xx               |
+| Enterprise           | xx               |
 
 ## Rate Limit Headers
 
