Updated the docs.

--- a/api-reference/audio/get-audio.mdx
+++ b/api-reference/audio/get-audio.mdx
@@ -1,5 +1,5 @@
 ---
 title: Get audio information
-description: "Get audio, voice and script associated with a generated audio."
+description: Get audio, voice and script associated with a generated audio.
 openapi: get /project/assets/user_audio/{id}/
 ---
