--- a/api-reference/avatar/create-avatar-video.mdx
+++ b/api-reference/avatar/create-avatar-video.mdx
@@ -1,5 +1,5 @@
 ---
 title: Create Avatar
-description: Generate a custom AI avatar from videos
+description: Create a custom AI avatar
 openapi: post /project/assets/generate_avatar_from_video/
 ---
