added avatar creation docs

--- a/quick-introduction.mdx
+++ b/quick-introduction.mdx
@@ -68,6 +68,10 @@ For advanced webhook configuration, explore our [webhook API guide](/webhook/ove
 
 <Snippet file="download-video.mdx" />
 
+## Create Your Avatar
+
+<Snippet file="create_avatar.mdx" />
+
 ### Conclusion
 
 For an in-depth understanding of DeepReel's APIs and their functionalities, we recommend reviewing
