--- a/quick-introduction.mdx
+++ b/quick-introduction.mdx
@@ -64,15 +64,15 @@ For advanced webhook configuration, explore our [webhook API guide](/webhook/ove
 
 <Snippet file="checking-video-status.mdx" />
 
-## Create Your Avatar
-
-<Snippet file="create_avatar.mdx" />
-
 ### Download the video
 
 <Snippet file="download-video.mdx" />
 
-### Conclusion
+## Create Your Avatar
+
+<Snippet file="create_avatar.mdx" />
+
+## Conclusion
 
 For an in-depth understanding of DeepReel's APIs and their functionalities, we recommend reviewing
 our [API reference](/api-reference/).
