--- a/quick-introduction.mdx
+++ b/quick-introduction.mdx
@@ -60,7 +60,7 @@ For advanced webhook configuration, explore our [webhook API guide](/webhook/ove
 
 <Snippet file="generate-video.mdx" />
 
-## Checking the status of the Video
+### Checking the status of the Video
 
 <Snippet file="checking-video-status.mdx" />
 
