--- a/api-reference/avatar/generate-signed-url.mdx
+++ b/api-reference/avatar/generate-signed-url.mdx
@@ -1,5 +1,7 @@
 ---
-title: Generate Signed Url
-description: generate signed url to upload video
+title: Generate video upload URL
+description: Create a `signed URL` to upload videos required for creating a custom avatar
 openapi: get /project/generate_signed_url/
 ---
+
+<Note>Custom Avatar API is available to Enterprise customers upon request: To get access, [contact sales](support@deepreel.com).</Note>
