--- a/api-reference/avatar/generate-signed-url.mdx
+++ b/api-reference/avatar/generate-signed-url.mdx
@@ -4,4 +4,4 @@ description: Create a `signed URL` to upload videos required for creating a cust
 openapi: get /project/generate_signed_url/
 ---
 
-<Note>Custom Avatar API is available to Enterprise customers upon request: To get access, [contact sales](support@deepreel.com).</Note>
+<Note>Custom Avatar API is available to Enterprise customers upon request: To get access, [contact support](support@deepreel.com).</Note>
